<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:clickable="true"
    android:background="@color/BlackCoral"
    tools:context=".fragments.SettingsFragment"
    android:focusable="true">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        app:srcCompat="@drawable/launcher_logo_2" />




    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:elevation="10dp">

        <TextView
            android:id="@+id/LinkTextSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/the_links_for_the_papers_are_below_for_you_to_see"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="top">

            <TextView
                android:id="@+id/Paper_1"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_1"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Paper_2"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_2"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Paper_3"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_3"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="top">

            <TextView
                android:id="@+id/Paper_4"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_4"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Paper_5"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_5"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Paper_6"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/Paper_6"
                android:textColorLink="#00CCFF"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/adViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>
</LinearLayout>