<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/BlackCoral"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        app:srcCompat="@drawable/launcher_logo_2" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/muchSettings"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="17dp"
                android:text="@string/here_goes_how_much"/>

            <TextView
                android:id="@+id/genderSettings"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="17dp"
                android:text="Here goes gender" />

            <TextView
                android:id="@+id/ageSettings"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="17dp"
                android:text="Here goes age" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:elevation="10dp">

        <TextView
            android:id="@+id/LinkTextSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="The links are below for you to see:"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/link1"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/Paper_1"
            android:gravity="center"
            android:textColorLink="#FFEB3B"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/link2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:text="@string/Paper_2"
            android:gravity="center"
            android:textColorLink="#FFEB3B"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/link3"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="48dp"
            android:text="@string/Paper_3"
            android:gravity="center"
            android:textColorLink="#FFEB3B"
            android:textStyle="bold"/>
    </LinearLayout>



</LinearLayout>