<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/BlackCoral"
    android:gravity="center|top"
    android:layout_gravity="center"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"
        android:text="Quick Introduction"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_home_24" />

        <TextView
            android:id="@+id/Text1"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/introduction_3"
            android:textAlignment="center"
            android:textSize="16sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_cancel_24" />

        <TextView
            android:id="@+id/Text2"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/introduction_2"
            android:textAlignment="center"
            android:textSize="16sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_attach_money_24" />

        <TextView
            android:id="@+id/Text3"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/introduction_1"
            android:textAlignment="center"
            android:textSize="16sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_check_circle_24" />

        <TextView
            android:id="@+id/Text4"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/introduction_4"
            android:textAlignment="center"
            android:textSize="16sp" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_baseline_table_rows_24" />

        <TextView
            android:id="@+id/Text5"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/introduction_5"
            android:textAlignment="center"
            android:textSize="16sp" />
    </GridLayout>


</LinearLayout>